[package]
name = "library-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoincore-rpc = "0.17.0"
signal-hook = "0.3.17"
bitcoin = "0.31.0"
bitcoin_hashes12 = { package = "bitcoin_hashes", version = "0.12.0" }
bitcoin_hashes13 = { package = "bitcoin_hashes", version = "0.13.0" }
sqlite = "0.32.0"
serde = "1.0.192"
serde_with = "3.4.0"
bincode = "1.3.3"
serde_json = "1.0.108"
thiserror = "1.0"
sha1 = "0.10.1"
home = "0.5.5"
hex = "0.4.3"
either = "1.9.0"
merkletree = "0.23.0"

[[bin]]
name = "lipnode"
path = "src/lipnode/main.rs"

[[bin]]
name = "lipcli"
path = "src/lipcli/main.rs"
